--- a/site.css
+++ b/site.css
@@ -3,6 +3,31 @@ html
   width:auto;
   height:auto;
 }
+.menu {
+    display: flex;        
+    padding:0; 
+    justify-content: center               
+}
+.menu li {
+    list-style-type: none ;       /* Suppression des puces */
+}
+.menu a {
+    display:block;                /* Transformation en block */
+    min-width: 120px;             /* Largeur minimale des liens */
+    margin: 0.5rem;               /* Marges externes (1 valeurs = 4 directions) */
+    padding: 0.4rem 0;            /* Marges internes (2 valeurs = haut/bas et gauche/droite)*/
+    text-align: center;           /* Centrage du texte */   
+    background-color: blue;    /* Couleur d'arrière-plan */
+    color: #fff;                  /* Couleur du texte */
+    text-decoration: none;        /* Suppression du soulignement */
+    border: 1px solid #fff;       /* Ajout d'une bordure */
+    border-radius: 4px;  
+}
+.menu a:hover {
+  background-color: white;
+  color: black;
+  border-color: black;
+}
 
 /*Header*/
 header
