--- a/Site/Etudiant.css
+++ b/Site/Etudiant.css
@@ -52,6 +52,7 @@ button
 {
 	padding: 0.5%;
 	margin-left: 93%;
+	margin-top : 0.2%;
 	border: 3px solid;
 	border-radius: 7%;
 	background-color: #fafaf9;
